--- a/ACNHGuide/Ressources/Base.lproj/LaunchScreen.storyboard
+++ b/ACNHGuide/Ressources/Base.lproj/LaunchScreen.storyboard
@@ -15,8 +15,19 @@
                     <view key="view" contentMode="scaleToFill" id="Scf-Wh-h4Q">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ACNHBackground" translatesAutoresizingMaskIntoConstraints="NO" id="Sck-qz-cRI">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="ZkJ-QO-JMA"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ZkJ-QO-JMA" firstAttribute="trailing" secondItem="Sck-qz-cRI" secondAttribute="trailing" id="2MC-kc-eBn"/>
+                            <constraint firstItem="Sck-qz-cRI" firstAttribute="top" secondItem="Scf-Wh-h4Q" secondAttribute="top" id="5fJ-79-kky"/>
+                            <constraint firstAttribute="bottom" secondItem="Sck-qz-cRI" secondAttribute="bottom" id="GGF-qG-gff"/>
+                            <constraint firstItem="Sck-qz-cRI" firstAttribute="leading" secondItem="ZkJ-QO-JMA" secondAttribute="leading" id="bqZ-NY-Cvs"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -25,6 +36,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="ACNHBackground" width="640" height="1106"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
